--- a/Project-12.qmd
+++ b/Project-12.qmd
@@ -122,6 +122,22 @@ educ_expenditure |>
   distinct(NATMON_IND) |> 
   knitr::kable()
 ```
+We will now apply the following function to all of the UNESCO data.
+
+```{r}
+datacleaning_unesco <- function(data){
+    data |> select(-`Flag Codes`, - Flags, - TIME, -ends_with("IND"))
+}
+```
+```{r}
+educ_expenditure <- datacleaning_unesco(educ_expenditure)
+GDP_capita <- datacleaning_unesco(GDP_capita)
+GDP <- datacleaning_unesco(GDP)
+young_pop <- datacleaning_unesco(young_pop)
+enrolment  <- datacleaning_unesco(enrolment)
+illiteracy <-datacleaning_unesco(illiteracy)
+rural <- datacleaning_unesco(rural)
+```
 
  
 We now are doing the data cleaning of the electricity variable. 
@@ -159,10 +175,6 @@ electricity <- electricity |>
   mutate("Time"= as.numeric(substr(Time, 1, 4)))
 ```
 
-
-
-
-
 We now are cleaning the PressFreedom variable.
 ```{r}
 PressFreedom |> 
@@ -177,7 +189,8 @@ PressFreedom |>
 ```
 
 ```{r}
-PressFreedom <- PressFreedom |> select(- `Indicator ID`, - `Subindicator Type`)
+PressFreedom <- PressFreedom |> 
+  select(- `Indicator ID`, - `Subindicator Type`)
 ```
 
 ```{r}
@@ -227,10 +240,6 @@ religion <- religion |>
   select(-Sex, -Reliability, - "Value Footnotes", -"Source Year") |>  
   rename("Country" = "Country or Area", "Time" = "Year")
 ```
-
-
-
-
 
 To finish, we now are cleaning the Institution variable, which only consists of renaming its columns. 
 ```{r}
@@ -289,8 +298,6 @@ life_expectancy |>
   knitr::kable(caption= "Statistics of life expectancy at birth (years) per year")
 ```
 
-
-
 The young population is expressed in number.
 
 This total young population table has `r population |> ncol()` columns, which are `r population |> names()`. It has `r population|> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the total population variable. 
@@ -301,8 +308,6 @@ young_pop |>
   head(n=10) |> 
   knitr::kable(caption= "Statistics of young population per year")
 ```
-
-
 
 The total net enrolment rate (in upper secondary, lower secondary and primary) of both sexes is expressed in percentage. 
 
@@ -316,8 +321,6 @@ enrolment |>
   knitr::kable(caption= "Statistics of enrolment per year")
 ```
 
-
-
 The Rural population is expressed as a percentage of the total population.
 
 This Rural population table has `r rural |> ncol()` columns, which are `r rural |> names()`. It has `r rural |> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the Rural population variable.
@@ -328,8 +331,6 @@ rural |>
   head(n=10) |> 
   knitr::kable(caption= "Statistics of rural population share per year")
 ```
-
-
 
 The access to electricity is measured as a percentage of the population.
 
@@ -343,8 +344,6 @@ electricity |>
   knitr::kable(caption= "Statistics of electricity access per year")
 
 ```
-
-
 
 The press freedom table shows for each country their rank and index. The index used ranges from 0 to 100 with 100 being a country with the best press freedom. This Index has been created by the Reporters Without Borders(RSF).
 
@@ -412,13 +411,18 @@ illiteracy |> filter(Country %in% c("Low income countries", "Upper middle income
 Est-ce qu'il y a un effet de niveau ? Ou pas ?
 
 Donc on fait en pourcentage :
+```{r}
+rate <- function(data){
+  data_rate <- inner_join(data, young_pop, by = c("Country", "Time"))
+}
+```
 
 ```{r}
 illiterate_rate <- inner_join(illiteracy, young_pop, by = c("Country", "Time")) 
 illiterate_rate <- illiterate_rate |> rename("Illiterate"="Value.x", "YoungPop"="Value.y")
 illiterate_rate <- illiterate_rate |> mutate("illiterate_rate"= Illiterate/YoungPop)
 ```
-### NEW
+### Creation of Regions
 ```{r}
 CentralAsia <- c("Armenia", "Azerbaijan", "Georgia", "Kazakhstan", "Kyrgyzstan", "Mongolia", "Tajikistan", "Turkmenistan", "Uzbekistan")
 
@@ -493,7 +497,7 @@ young_pop_SouthEastAsia <-
   filter(Country %in% SoutheastAsia) |>
   group_by(Time) |>
   summarise(total_value = sum(Value, na.rm = TRUE))
-young_pop_SouthEastAsia <- young_pop_SouthEastAsia |> mutate("Region"= "South East Asia ")
+young_pop_SouthEastAsia <- young_pop_SouthEastAsia |> mutate("Region"= "South East Asia")
 ```
 ### Illiterate per region
 
@@ -627,8 +631,4 @@ data_inter <- inner_join(data_inter, young_pop, by = c("Country", "Time"))
 ```
 On créée un nouveau taux d'expenditure
 
-```{r}
-graph2_data |> group_by(group) |> ggplot(aes(x= Time, y= illiterate_rate)) + geom_col() + ylab("Number of illiterate people per group") + ggtitle("Distribution of Illiteracy (rate) over time") + facet_wrap(~group)
-```
 Voir d'où provient le problème: ce n'est pas normal que le taux soit plus grand que 1
-
